første setup af startside mm.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,34 @@
 <body >
 <div id="eagle"><img id="logo" src="Eagle_01.svg.png" alt="notfound" ></div>
     
+<div id="pizzaDiv" class="menupunkter">
+    <p>Pizza</p>
+</div>
+<div id="burgerDiv" class="menupunkter">
+    <p>Burger</p>
+    
+</div>
+<div id="dishDiv" class="menupunkter">
+    <p>Andre Retter</p>
+
+</div>
+<div id="drinkDiv" class="menupunkter">
+    <p>Drikkevare</p>
+</div>
+<div id="durumDiv" class="menupunkter">
+    <p>Durum</p>
+</div>
+<div id="menuDiv" class="menupunkter">
+    <p>Menuer</p>
+</div>
+<div id="pitaDiv" class="menupunkter">
+    <p>Pitabrød</p>
+</div>
+<div id="pizzasandwichDiv" class="menupunkter">
+    <p>Pizza Sandwich</p>
+</div>
+<div id="turkbreadDiv" class="menupunkter">
+    <p>Tyrkisk Brød</p>
+</div>
 </body>
 </html>
