--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body >
 <div id="eagle"><img id="logo" src="Eagle_01.svg.png" alt="notfound" ></div>
     
+<div id="du ringer vi ringer" class="menupunkter">
+    <h1>Pizzeria & Grill</h1>
+    <h1>35370727</h1>
+</div>
+
 <div id="pizzaDiv" class="menupunkter">
     <p>Pizza</p>
+</div>
+<div id="frokostTilbud" class="menupunkter">
+    <p>Frokost Tilbud</p>
 </div>
 <div id="burgerDiv" class="menupunkter">
     <p>Burger</p>
@@ -38,6 +46,9 @@
 </div>
 <div id="turkbreadDiv" class="menupunkter">
     <p>Tyrkisk Brød</p>
+</div>
+<div id="kontaktDiv" class="menupunkter">
+    <p>Kontakt</p>
 </div>
 </body>
 </html>
