første fetch metode

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocumentOverload</title>
     <link rel="stylesheet" type="text/css" href="stylesheet1.css">
+    <script src="scripts.js"></script>
 
 </head>
 <body >
@@ -16,7 +17,7 @@
 </div>
 
 <div id="pizzaDiv" class="menupunkter">
-    <p>Pizza</p>
+    <button onclick="jsGet.getPizzaList()">Pizza</button>
 </div>
 <div id="frokostTilbud" class="menupunkter">
     <p>Frokost Tilbud</p>
