fantastiks frontend design

--- a/index.html
+++ b/index.html
@@ -9,15 +9,46 @@
 
 </head>
 <body >
-<div id="eagle"><img id="logo" src="Eagle_01.svg.png" alt="notfound" ></div>
+<div id="eagle" style="width: 75%;"><img id="logo" src="Eagle_01.svg.png" alt="notfound" ><img id="logo" src="eagle3.png" alt="notfound" ></div>
+<div id="eagle-right"></div>
+
     
 <div id="du ringer vi ringer" class="menupunkter">
     <h1>Pizzeria & Grill</h1>
-    <h1>35370727</h1>
+    <h5>35370727</h5>
 </div>
 
 <div id="pizzaDiv" class="menupunkter">
-    <button onclick="jsGet.getPizzaList()">Pizza</button>
+    <!-- <button onclick="jsGet.getPizzaList()">Pizza</button> -->
+    <div id="table-div">
+    <table>
+        <tr>
+        <th style="width: 80%;">Pizza</th>
+        <th>Normal-Pris</th>
+        <th>Familie-Pris</th>
+        </tr>
+
+        <tr> 
+        <td>1. Maragarita.Tomat, ost</td>
+        <td>45-</td>
+        <td>80-</td>
+        </tr>
+        
+        <tr>
+        <td>2. Hawaii. Tomat, ost, skinke, anannas</td>
+        <td>55-</td>
+        <td>105-</td>
+    </tr>
+
+        <td>3. Capricciosa tomat, ost, skinke, champignon</td>
+
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+    </table>
+</div>
 </div>
 <div id="frokostTilbud" class="menupunkter">
     <p>Frokost Tilbud</p>
