--- a/index.html
+++ b/index.html
@@ -14,11 +14,50 @@
     <div id="eagle">
         <div id="logo1div"><img id="logo1" src="Eagle_01.svg.png" alt="notfound"></div>
 
-    <div class="topheader">
-            <center><h1 id="topH1">EAGLE STEAK HOUSE</h1><h2>Pizzeria & Grill - RING OG BESTIL 35370727</h2></center>
-            
-    </div>
-    <div id="logo2div"><img id="logo2" src="eagle3.png" alt="notfound"></div>
+        <div class="topheader">
+            <center>
+                <h1 id="topH1">EAGLE STEAK HOUSE</h1>
+                <h2>Pizzeria & Grill - RING OG BESTIL 35370727</h2>
+            </center>
+            <div class="topbar">
+                <table>
+                    <td class="td">
+                        <a href="#pizzaDiv" class="topbar-item"><b>PIZZA</b></a>
+                    </td>
+                    <td class="td">
+                        <a href="#frokostTilbud" class="topbar-item">FROKOST TILBUD</a>
+                    </td>
+                    <td class="td">
+                        <a href="#burgerDiv" class="topbar-item">BURGER</a>
+                    </td>
+                    <td class="td">
+                        <a href="#dishDiv" class="topbar-item">RETTER</a>
+                    </td>
+                    <td class="td">
+                        <a href="#drinkDiv" class="topbar-item">DRIKKEVARE</a>
+                    </td>
+                    <td class="td">
+                        <a href="#durumDiv" class="topbar-item">DURUM</a>
+                    </td>
+                    <td class="td">
+                        <a href="#menuDiv" class="topbar-item">MENUER</a>
+                    </td>
+                    <td class="td">
+                        <a href="#pitaDiv" class="topbar-item">PITA</a>
+                    </td>
+                    <td class="td">
+                        <a href="#pizzasandwichDiv" class="topbar-item">PIZZASANDWICH</a>
+                    </td>
+                    <td class="td">
+                        <a href="#turkbreadDiv" class="topbar-item">TYRKISK BRØD</a>
+                    </td>
+                    <td class="td">
+                        <a href="#kontaktDiv" class="topbar-item">KONTAKT</a>
+                    </td>
+                </table>
+            </div>
+        </div>
+        <div id="logo2div"><img id="logo2" src="eagle3.png" alt="notfound"></div>
 
     </div>
 
