PIZZA menu table udfyldt

--- a/index.html
+++ b/index.html
@@ -77,24 +77,55 @@
                 </tr>
 
                 <tr>
-                    <td>1. Maragarita.Tomat, ost</td>
+                    <td><b>1. Maragarita</b> <br>Tomat, ost</td>
                     <td>45-</td>
                     <td>80-</td>
                 </tr>
 
+                <b></b>
+
                 <tr>
-                    <td>2. Hawaii. Tomat, ost, skinke, anannas</td>
+                    <td><b>2. Hawaii</b> <br>Tomat, ost, skinke, anannas</td>
                     <td>55-</td>
                     <td>105-</td>
                 </tr>
 
-                <td>3. Capricciosa tomat, ost, skinke, champignon</td>
+                <tr>
+                    <td><b>3. Capricciosa</b> <br>Tomat, ost, skinke, champignon</td>
+                    <td>55-</td>
+                    <td>105-</td>
+                </tr>
 
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
+                <tr>
+                    <td><b>4. Quattro Stagioni</b> <br>Tomat, ost, skinke, champignon, pepperoni</td>
+                    <td>60-</td>
+                    <td>110-</td>
+                </tr>
+
+                <tr>
+                    <td><b>5. Italiana</b> <br>Tomat, ost, kødsauce, løg</td>
+                    <td>55-</td>
+                    <td>105-</td>
+                </tr>
+
+                <tr><td><b>6. Milano</b> <br>Tomat, ost, kylling, rucola, pesto</td><td>60-</td><td>110-</td></tr>
+
+                <tr><td><b>7. pepperoni</b> <br>Tomat, ost, rucola, pesto, pepperoni</td><td>60</td><td>110</td></tr>
+
+                <tr><td><b>8. Roma</b> <br>Tomat, ost, pepperoni, bacon</td><td>60-</td><td>105-</td></tr>
+
+                <tr><td><b>9. Steak House</b> <br>Tomat, ost, pepperoni, skinke, shawarma</td><td>65-</td><td>120-</td></tr>
+
+                <tr><td><b>10. Husets Pizza</b> <br>Tomat, ost, kylling, paprika, champignon, shawarma</td><td>65-</td><td>110-</td></tr>
+
+                <tr><td><b>11. Nuno Special</b> <br>Tomat, ost, shawarma ELLER kylling, salat, dressing</td><td>60-</td><td>110-</td></tr>
+
+                <tr><td><b>12. Shawarma Special</b> <br>Tomat, ost,</td><td>60-</td><td>110-</td></tr>
+
+
+
+            
+
             </table>
         </div>
     </div>
