--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </tr>
 
                 <tr>
-                    <td><b>5. Italiana</b> <br>Tomat, ost, kødsauce, løg</td>
+                    <td><b>5. Italiana</b> <br>Tomat, Ost, kødsauce, løg</td>
                     <td>55-</td>
                     <td>105-</td>
                 </tr>
