--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <div id="pizzaDiv" class="menupunkter">
         <!-- <button onclick="jsGet.getPizzaList()">Pizza</button> -->
         <div class="table-div">
-            <table>
+            <table style="width: 100%;">
                 <tr>
-                    <th style="width: 80%;">Pizza</th>
+                    <th >Pizza</th>
                     <th>Normal-Pris</th>
                     <th>Familie-Pris</th>
                 </tr>
@@ -160,6 +160,7 @@
             </table>
         </div>
     </div>
+
     <div id="frokostTilbud" class="menupunkter">
 
         <div class="table-div">
