--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
     <!-- Her begynder slideshow coden-->
 <div class="slideshow">
     <div class="mySlides fade">
-      <img src="pizza1.jpg" style="width:50%">
+      <img src="pizza1.jpg" style="width:50%" alt="notfound">
     </div>
     <div class="mySlides fade">
-      <img src="pizza2.jpg" style="width:50%">
+      <img src="pizza2.jpg" style="width:50%" alt="notfound">
     </div>
     <div class="mySlides fade">
-      <img src="pizza3.jpg" style="width:70%">
+      <img src="pizza3.jpg" style="width:50%" alt="notfound">
     </div>
     
     </div>
