google pin added

--- a/index.html
+++ b/index.html
@@ -153,10 +153,6 @@
                     <td>110-</td>
                 </tr>
 
-
-
-
-
             </table>
         </div>
     </div>
@@ -375,6 +371,10 @@
     <div id="kontaktDiv" class="menupunkter">
         <p>Kontakt</p>
     </div>
+    <div class="googlePin">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.132269986015!2d12.547415815335004!3d55.68668810455749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253a8d1572e89%3A0x19cf1c662f6bb22f!2sRantzausgade%2032%2C%202200%20K%C3%B8benhavn!5e0!3m2!1sda!2sdk!4v1669971183355!5m2!1sda!2sdk" 
+    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <!-- Her begynder slideshow coden-->
 <div class="slideshow">
     <div class="mySlides fade">
@@ -384,7 +384,7 @@
       <img src="pizza2.jpg" style="width:50%">
     </div>
     <div class="mySlides fade">
-      <img src="pizza3.jpg" style="width:70%">
+      <img src="pizza3.jpg" style="width:50%">
     </div>
     
     </div>
