--- a/index.html
+++ b/index.html
@@ -167,38 +167,38 @@
                 </tr>
 
                 <tr>
-                    <td>F1. PIZZA: Tomat, ost, shawarma eller kylling salat, dressing</td>
+                    <td><b>F1. PIZZA</b> <br>Tomat, ost, shawarma eller kylling salat, dressing</td>
                     <td>45-</td>
 
                 </tr>
 
                 <tr>
-                    <td>F2. PIZZA: Tomat, ost, pepperoni, pesto </td>
+                    <td><b>F2. PIZZA</b> <br> Tomat, ost, pepperoni, pesto </td>
                     <td>45-</td>
 
                 </tr>
 
-                <td>F3. PIZZA: Tomat, ost, skinke, champignon</td>
+                <td><b>F3. PIZZA</b> <br> Tomat, ost, skinke, champignon</td>
                 <td>45-</td>
 
                 <tr>
-                    <td> F4. PIZZA: Tomat, ost, kødsauce, løg</td>
+                    <td><b>F4. PIZZA</b> <br> Tomat, ost, kødsauce, løg</td>
                     <td>45-</td>
                 </tr>
                 <tr>
-                    <td>F5 2 stk. fiskefilet med pommes frites og salat</td>
+                    <td><b>F5. FISKEFILLET</b> <br>2 stk. fiskefilet med pommes frites og salat</td>
                     <td>45-</td>
                 </tr>
                 <tr>
-                    <td>F6 Frit valg af alle pizza sandwich</td>
+                    <td><b>F6. PIZZASANDWICH</b> <br>Frit valg af alle pizza sandwich</td>
                     <td>45-</td>
                 </tr>
                 <tr>
-                    <td>F7 alle hjemmelavede pitabrød</td>
+                    <td><b>F7. PITA</b> <br>Alle hjemmelavede pitabrød</td>
                     <td>30-</td>
                 </tr>
                 <tr>
-                    <td>F8 alle hjemmelavede durum</td>
+                    <td><b>F8. DURUM</b> <br> Alle hjemmelavede durum</td>
                     <td>37-</td>
                 </tr>
             </table>
@@ -226,23 +226,23 @@
                     <th>Pris</th>
                 </tr>
                 <tr>
-                    <td>50. Shawarma salat, dressing</td>
+                    <td><b>50. Shawarma</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>51. Kylling salat, dressing</td>
+                    <td><b>51. Kylling</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>52. Falafel salat, dressing</td>
+                    <td><b>52. Falafel</b> <br>Salat, dressing</td>
                     <td>37-</td>
                 </tr>
                 <tr>
-                    <td>53. Tun salat, dressing</td>
+                    <td><b>53. Tun</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>54. Græsk Bøf salat, dressing</td>
+                    <td><b>54. Græsk Bøf</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
             </table>
@@ -263,23 +263,23 @@
                     <th>Pris</th>
                 </tr>
                 <tr>
-                    <td>60. Shawarma salat, dressing</td>
+                    <td><b>60. Shawarma</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>61. Kylling salat, dressing</td>
+                    <td><b>61. Kylling</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>62. Falafel salat, dressing</td>
+                    <td><b>62. Falafel</b> <br>Salat, dressing</td>
                     <td>37-</td>
                 </tr>
                 <tr>
-                    <td>53. Tun salat, dressing</td>
+                    <td><b>53. Tun</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
                 <tr>
-                    <td>64. Græsk Bøf salat, dressing</td>
+                    <td><b>64. Græsk Bøf</b> <br>Salat, dressing</td>
                     <td>39-</td>
                 </tr>
             </table>
@@ -294,23 +294,23 @@
                     <th>Pris</th>
                 </tr>
                 <tr>
-                    <td>30. Shawarma salat, dressing</td>
+                    <td><b>30. Shawarma</b> <br>Salat, dressing</td>
                     <td>49-</td>
                 </tr>
                 <tr>
-                    <td>31. Kylling salat, dressing</td>
+                    <td><b>31. Kylling</b> <br>Salat, dressing</td>
                     <td>49-</td>
                 </tr>
                 <tr>
-                    <td>32. Falafel salat, dressing</td>
+                    <td><b>32. Falafel</b> <br>Salat, dressing</td>
                     <td>49-</td>
                 </tr>
                 <tr>
-                    <td>33. Tun salat, dressing</td>
+                    <td><b>33. Tun</b> <br>Salat, dressing</td>
                     <td>49-</td>
                 </tr>
                 <tr>
-                    <td>34. Græsk Bøf salat, dressing</td>
+                    <td><b>34. Græsk Bøf</b> <br>Salat, dressing</td>
                     <td>49-</td>
                 </tr>
             </table>
@@ -325,23 +325,23 @@
                     <th>Pris</th>
                 </tr>
                 <tr>
-                    <td>70. Shawarma salat, dressing</td>
+                    <td><b>70. Shawarma</b> <br>Salat, dressing</td>
                     <td>40-</td>
                 </tr>
                 <tr>
-                    <td>71. Kylling salat, dressing</td>
+                    <td><b>71. Kylling</b> <br>Salat, dressing</td>
                     <td>40-</td>
                 </tr>
                 <tr>
-                    <td>72. Falafel salat, dressing</td>
+                    <td><b>72. Falafel</b> <br>Salat, dressing</td>
                     <td>40-</td>
                 </tr>
                 <tr>
-                    <td>73. Tun salat, dressing</td>
+                    <td><b>73. Tun</b> <br>Salat, dressing</td>
                     <td>40-</td>
                 </tr>
                 <tr>
-                    <td>74. Græsk Bøf salat, dressing</td>
+                    <td><b>74. Græsk Bøf</b> <br>Salat, dressing</td>
                     <td>40-</td>
                 </tr>
             </table>
@@ -357,11 +357,11 @@
                     <th>Pris</th>
                 </tr>
                 <tr>
-                    <td>80. Pommes Frites medium</td>
+                    <td><b>80. Pommes Frites</b> <br>Medium</td>
                     <td>24-</td>
                 </tr>
                 <tr>
-                    <td>81. Pommes Frites stor</td>
+                    <td><b>81. Pommes Frites</b> <br>Stor</td>
                     <td>28-</td>
                 </tr>
             </table>
