--- a/index.html
+++ b/index.html
@@ -82,76 +82,76 @@
 
                 <tr>
                     <td><b>1. Maragarita</b> <br>Tomat, ost</td>
-                    <td>45-</td>
-                    <td>80-</td>
+                    <td class="pris">45-</td>
+                    <td class="pris">80-</td>
                 </tr>
 
                 <b></b>
 
                 <tr>
                     <td><b>2. Hawaii</b> <br>Tomat, ost, skinke, anannas</td>
-                    <td>55-</td>
-                    <td>105-</td>
+                    <td class="pris">55-</td>
+                    <td class="pris">105-</td>
                 </tr>
 
                 <tr>
                     <td><b>3. Capricciosa</b> <br>Tomat, ost, skinke, champignon</td>
-                    <td>55-</td>
-                    <td>105-</td>
+                    <td class="pris">55-</td>
+                    <td class="pris">105-</td>
                 </tr>
 
                 <tr>
                     <td><b>4. Quattro Stagioni</b> <br>Tomat, ost, skinke, champignon, pepperoni</td>
-                    <td>60-</td>
-                    <td>110-</td>
+                    <td  class="pris">60-</td>
+                    <td  class="pris">110-</td>
                 </tr>
 
                 <tr>
                     <td><b>5. Italiana</b> <br>Tomat, Ost, kødsauce, løg</td>
-                    <td>55-</td>
-                    <td>105-</td>
+                    <td  class="pris">55-</td>
+                    <td  class="pris">105-</td>
                 </tr>
 
                 <tr>
                     <td><b>6. Milano</b> <br>Tomat, ost, kylling, rucola, pesto</td>
-                    <td>60-</td>
-                    <td>110-</td>
+                    <td  class="pris">60-</td>
+                    <td  class="pris">110-</td>
                 </tr>
 
                 <tr>
                     <td><b>7. pepperoni</b> <br>Tomat, ost, rucola, pesto, pepperoni</td>
-                    <td>60</td>
-                    <td>110</td>
+                    <td class="pris">60</td>
+                    <td class="pris">110</td>
                 </tr>
 
                 <tr>
                     <td><b>8. Roma</b> <br>Tomat, ost, pepperoni, bacon</td>
-                    <td>60-</td>
-                    <td>105-</td>
+                    <td class="pris">60-</td>
+                    <td class="pris">105-</td>
                 </tr>
 
                 <tr>
                     <td><b>9. Steak House</b> <br>Tomat, ost, pepperoni, skinke, shawarma</td>
-                    <td>65-</td>
-                    <td>120-</td>
+                    <td class="pris">65-</td>
+                    <td class="pris">120-</td>
                 </tr>
 
                 <tr>
                     <td><b>10. Husets Pizza</b> <br>Tomat, ost, kylling, paprika, champignon, shawarma</td>
-                    <td>65-</td>
-                    <td>110-</td>
+                    <td class="pris">65-</td>
+                    <td class="pris">110-</td>
                 </tr>
 
                 <tr>
                     <td><b>11. Nuno Special</b> <br>Tomat, ost, shawarma ELLER kylling, salat, dressing</td>
-                    <td>60-</td>
-                    <td>110-</td>
+                    <td class="pris">60-</td>
+                    <td class="pris">110-</td>
                 </tr>
 
                 <tr>
                     <td><b>12. Shawarma Special</b> <br>Tomat, ost,</td>
-                    <td>60-</td>
-                    <td>110-</td>
+                    <td class="pris">60-</td>
+                    <td class="pris">110-</td>
                 </tr>
 
             </table>
@@ -169,38 +169,38 @@
 
                 <tr>
                     <td><b>F1. PIZZA</b> <br>Tomat, ost, shawarma eller kylling salat, dressing</td>
-                    <td>45-</td>
+                    <td class="pris">45-</td>
 
                 </tr>
 
                 <tr>
                     <td><b>F2. PIZZA</b> <br> Tomat, ost, pepperoni, pesto </td>
-                    <td>45-</td>
+                    <td class="pris">45-</td>
 
                 </tr>
 
                 <td><b>F3. PIZZA</b> <br> Tomat, ost, skinke, champignon</td>
-                <td>45-</td>
+                <td class="pris">45-</td>
 
                 <tr>
                     <td><b>F4. PIZZA</b> <br> Tomat, ost, kødsauce, løg</td>
-                    <td>45-</td>
+                    <td class="pris">45-</td>
                 </tr>
                 <tr>
                     <td><b>F5. FISKEFILLET</b> <br>2 stk. fiskefilet med pommes frites og salat</td>
-                    <td>45-</td>
+                    <td class="pris">45-</td>
                 </tr>
                 <tr>
                     <td><b>F6. PIZZASANDWICH</b> <br>Frit valg af alle pizza sandwich</td>
-                    <td>45-</td>
+                    <td class="pris">45-</td>
                 </tr>
                 <tr>
                     <td><b>F7. PITA</b> <br>Alle hjemmelavede pitabrød</td>
-                    <td>30-</td>
+                    <td class="pris">30-</td>
                 </tr>
                 <tr>
                     <td><b>F8. DURUM</b> <br> Alle hjemmelavede durum</td>
-                    <td>37-</td>
+                    <td class="pris">37-</td>
                 </tr>
             </table>
         </div>
@@ -228,23 +228,23 @@
                 </tr>
                 <tr>
                     <td><b>50. Shawarma</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>51. Kylling</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>52. Falafel</b> <br>Salat, dressing</td>
-                    <td>37-</td>
+                    <td class="pris">37-</td>
                 </tr>
                 <tr>
                     <td><b>53. Tun</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>54. Græsk Bøf</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
             </table>
         </div>
@@ -265,23 +265,23 @@
                 </tr>
                 <tr>
                     <td><b>60. Shawarma</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>61. Kylling</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>62. Falafel</b> <br>Salat, dressing</td>
-                    <td>37-</td>
+                    <td class="pris">37-</td>
                 </tr>
                 <tr>
                     <td><b>53. Tun</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
                 <tr>
                     <td><b>64. Græsk Bøf</b> <br>Salat, dressing</td>
-                    <td>39-</td>
+                    <td class="pris">39-</td>
                 </tr>
             </table>
         </div>
@@ -296,23 +296,23 @@
                 </tr>
                 <tr>
                     <td><b>30. Shawarma</b> <br>Salat, dressing</td>
-                    <td>49-</td>
+                    <td class="pris">49-</td>
                 </tr>
                 <tr>
                     <td><b>31. Kylling</b> <br>Salat, dressing</td>
-                    <td>49-</td>
+                    <td class="pris">49-</td>
                 </tr>
                 <tr>
                     <td><b>32. Falafel</b> <br>Salat, dressing</td>
-                    <td>49-</td>
+                    <td class="pris">49-</td>
                 </tr>
                 <tr>
                     <td><b>33. Tun</b> <br>Salat, dressing</td>
-                    <td>49-</td>
+                    <td class="pris">49-</td>
                 </tr>
                 <tr>
                     <td><b>34. Græsk Bøf</b> <br>Salat, dressing</td>
-                    <td>49-</td>
+                    <td class="pris">49-</td>
                 </tr>
             </table>
         </div>
@@ -327,23 +327,23 @@
                 </tr>
                 <tr>
                     <td><b>70. Shawarma</b> <br>Salat, dressing</td>
-                    <td>40-</td>
+                    <td class="pris">40-</td>
                 </tr>
                 <tr>
                     <td><b>71. Kylling</b> <br>Salat, dressing</td>
-                    <td>40-</td>
+                    <td class="pris">40-</td>
                 </tr>
                 <tr>
                     <td><b>72. Falafel</b> <br>Salat, dressing</td>
-                    <td>40-</td>
+                    <td class="pris">40-</td>
                 </tr>
                 <tr>
                     <td><b>73. Tun</b> <br>Salat, dressing</td>
-                    <td>40-</td>
+                    <td class="pris">40-</td>
                 </tr>
                 <tr>
                     <td><b>74. Græsk Bøf</b> <br>Salat, dressing</td>
-                    <td>40-</td>
+                    <td class="pris">40-</td>
                 </tr>
             </table>
         </div>
@@ -359,11 +359,11 @@
                 </tr>
                 <tr>
                     <td><b>80. Pommes Frites</b> <br>Medium</td>
-                    <td>24-</td>
+                    <td class="pris">24-</td>
                 </tr>
                 <tr>
                     <td><b>81. Pommes Frites</b> <br>Stor</td>
-                    <td>28-</td>
+                    <td class="pris">28-</td>
                 </tr>
             </table>
 
