--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <center>
                 <h1 id="topH1">EAGLE STEAK HOUSE</h1>
                 <h2>RANTZAUSGADE 32</h2>
-                <h2>Pizzeria & Grill - RING OG BESTIL 35370727</h2>
+                <h2>PIZZERIA & GRILL - RING OG BESTIL 35370727</h2>
             </center>
             <div class="topbar">
                 <table>
@@ -371,6 +371,9 @@
     </div>
     <div id="kontaktDiv" class="menupunkter">
         <p>Kontakt</p>
+        <div id="smileydata">
+            <a href="http://www.findsmiley.dk/508817"> <img src="smileys.jpg"></a>
+        </div>
     </div>
     <div class="googlePin">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.132269986015!2d12.547415815335004!3d55.68668810455749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253a8d1572e89%3A0x19cf1c662f6bb22f!2sRantzausgade%2032%2C%202200%20K%C3%B8benhavn!5e0!3m2!1sda!2sdk!4v1669971183355!5m2!1sda!2sdk" 
@@ -387,8 +390,8 @@
     <div class="mySlides fade">
       <img src="pizza3.jpg" style="width:50%" alt="notfound">
     </div>
-    
     </div>
+    
     <script>
         let slideIndex = 0;
         showSlides();
