js struktur igen igen

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         <div id="logo2div"><img id="logo2" src="eagle3.png" alt="notfound"></div>
 
     </div>
-
+    <div>
+                    <a href="ManualNikolaj.html" > <img src="Login.jpg" alt="Login"></a>>
+                    <a href="ManualMathias.html" > <img src="Login.jpg" alt="Login"></a>>
+    </div>
 
 
 
