--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>DocumentOverload</title>
     <link rel="stylesheet" type="text/css" href="stylesheet1.css">
     <script src="scripts.js"></script>
-
 </head>
 
 <body>
@@ -55,8 +54,8 @@
 
     </div>
     <div>
-                    <a href="ManualNikolaj.html" > <img src="Login.jpg" alt="Login"></a>>
-                    <a href="ManualMathias.html" > <img src="Login.jpg" alt="Login"></a>>
+                    <a href="htmlNikolaj.html" > <img src="Login.jpg" alt="Login"></a>>
+                    <a href="htmlMathias.html" > <img src="Login.jpg" alt="Login"></a>>
     </div>
 
 
