js indlæsning- meget tæt på

--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -8,6 +8,14 @@
     <script src="jsMathias.js"></script>
 </head>
 <body>
+    <button onclick="jsGet.getPizzaList()">Pizza</button>
+    <div id="pizzaDiv2"></div>
     
+    <button onclick="jsGet.getBurgerList()">Burger</button>
+    <div id="burgerDiv2"></div>
+
+    <button onclick="jsGet.getBurgerList2()">BurgerBruh</button>
+    <div></div>
+    <button onclick="jsGet.tableCreate()">bruh</button>
 </body>
 </html>
