--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -16,6 +16,6 @@
 
     <button onclick="jsGet.getBurgerList2()">BurgerBruh</button>
     <div></div>
-    <button onclick="jsGet.tableCreate()">bruh</button>
+    <button onclick="tableCreate(4,4)">bruh</button>
 </body>
 </html>
