--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -14,8 +14,8 @@
     <button onclick="jsGet.getBurgerList()">Burger</button>
     <div id="burgerDiv2"></div>
 
-    <button onclick="jsGet.getBurgerList2()">BurgerBruh</button>
-    <div></div>
+    <button onclick="jsGet.getBurgerList2()">Burger Table</button>
+    <div id="burgerDiv3"></div>
     <button onclick="tableCreate(4,4)">bruh</button>
 </body>
 </html>
