chips fetch done

--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -16,6 +16,8 @@
 
     <button onclick="jsGet.getBurgerList2()">Burger Table</button>
     <div id="burgerDiv3"></div>
-    <button onclick="tableCreate(4,4)">bruh</button>
+    
+    <button onclick="jsGet.getChipsList()">Chips Table</button>
+    <div id="chipsDiv3"></div>
 </body>
 </html>
