--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -19,5 +19,8 @@
     
     <button onclick="jsGet.getChipsList()">Chips Table</button>
     <div id="chipsDiv3"></div>
+
+    <button onclick="jsGet.getDishList()">Dish Table</button>
+    <div id="dishDiv3"></div>
 </body>
 </html>
