resten af fetch tilføjet

--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -22,5 +22,11 @@
 
     <button onclick="jsGet.getDishList()">Dish Table</button>
     <div id="dishDiv3"></div>
+
+    <button onclick="jsGet.getDrinkList()">Drink Table</button>
+    <div id="drinkDiv3"></div>
+
+    <button onclick="jsGet.getDurumList()">Durum Table</button>
+    <div id="durumDiv3"></div>
 </body>
 </html>
