Nikolajs html og js

--- a/htmlNikoLaj.html
+++ b/htmlNikoLaj.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="stylesheet1.css">
-    <script src="jsNikoLaj.js"></script>
+    <script src="jsNikolaj.js"></script>
 </head>
 <body>
+    <button onclick="jsGet.getMenuList()">Menu Table</button>
+    <div id="menuDiv"></div>
     
+    <button onclick="jsGet.getPitaList()">Pita Table</button>
+    <div id="pitaDiv"></div>
+
+    <button onclick="jsGet.getPizzaSandwichList()">Pizza Sandwich Table</button>
+    <div id="pizzaSandwichDiv"></div>
+    
+    <button onclick="jsGet.getTurkBreadList()">Tyrkisk Brød Table</button>
+    <div id="turkBreadDiv"></div>
+
 </body>
 </html>
