tilføjelse til menu JS

--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -8,25 +8,35 @@
     <script src="jsMathias.js"></script>
 </head>
 <body>
+    <div></div>
     <button onclick="jsGet.getPizzaList()">Pizza</button>
     <div id="pizzaDiv2"></div>
     
+    <div></div>
     <button onclick="jsGet.getBurgerList()">Burger</button>
     <div id="burgerDiv2"></div>
 
+    <div></div>
     <button onclick="jsGet.getBurgerList2()">Burger Table</button>
     <div id="burgerDiv3"></div>
     
+    <div></div>
     <button onclick="jsGet.getChipsList()">Chips Table</button>
     <div id="chipsDiv3"></div>
 
+    <div></div>
     <button onclick="jsGet.getDishList()">Dish Table</button>
     <div id="dishDiv3"></div>
 
+    <div></div>
     <button onclick="jsGet.getDrinkList()">Drink Table</button>
     <div id="drinkDiv3"></div>
 
-    <button onclick="jsGet.getDurumList()">Durum Table</button>
-    <div id="durumDiv3"></div>
+    <div class="menupunkter table-div" style="display:table;">
+        <a style="display:table-cell;text-decoration: none;padding:50px;text-align:center;" 
+        onclick="jsGet.getDurumList()">Durum Table</a>
+        <br>
+    <div id="durumDiv3" style="width: 80%"></div>
+    </div>
 </body>
 </html>
