frokost menu mm tilføjet

--- a/htmlMathias.html
+++ b/htmlMathias.html
@@ -8,6 +8,17 @@
     <script src="jsMathias.js"></script>
 </head>
 <body>
+    <div class="menupunkter" style="display:table;">
+        <a id="pizzaTableBtn" style="display:table-cell;text-decoration: none;padding:50px;text-align:center;"
+     onclick="jsGet.getPizzaList()"><b>Pizza</b></a>
+    <div id="pizzaDiv3"></div>
+    </div>
+
+    <div class="menupunkter" style="display:table;">
+        <a id="lunchofferTableBtn" style="display:table-cell;text-decoration: none;padding:50px;text-align:center;"
+     onclick="jsGet.getLunchOfferList()"><b>Frokost Menu</b></a>
+    <div id="lunchofferDiv3"></div>
+    </div>
 
     <div class="menupunkter" style="display:table;">
         <a id="burgerTableBtn" style="display:table-cell;text-decoration: none;padding:50px;text-align:center;"
