ørne logoer tilpasset

--- a/Velkommen.html
+++ b/Velkommen.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="topheader2">
-        <div id="logo1div"><img id="logo2" src="eagle3.png" alt="notfound" style="margin-left: 50px; margin-top: 25px;"></div>
+        <div id="logo1div"><img id="logo2" src="eagle3.png" alt="notfound" style="margin-left: 50px; margin-top: 25px;
+            height: 300px; width: 250px;"></div>
 
         <center>
         <h1>Velkommen til Eagle SteakHouse</h1>
@@ -21,7 +22,8 @@
 
         <a href="htmlMathias.html"><h3>MENUER</h3></a>
     </center>
-    <div id="logo2div"><img id="logo1" src="Eagle_01.svg.png" alt="notfound" style="margin-right: 50px; margin-top: 25px;"></div>
+    <div id="logo2div"><img id="logo1" src="Eagle_01.svg.png" alt="notfound" style="margin-right: 50px; margin-top: 25px;
+        height: 300px; width: 250px;""></div>
     </div>
 
 
