logo ørn justering

--- a/Velkommen.html
+++ b/Velkommen.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="topheader2">
-        <div id="logo1div"><img id="logo2" src="eagle3.png" alt="notfound" style="margin-left: 50px; margin-top: 25px;
-            height: 300px; width: 250px;"></div>
+        <div id="logo1div"><img id="logo1w" src="eagle3.png" alt="notfound"></div>
 
         <center>
         <h1>Velkommen til Eagle SteakHouse</h1>
@@ -22,8 +21,7 @@
 
         <a href="htmlMathias.html"><h3>MENUER</h3></a>
     </center>
-    <div id="logo2div"><img id="logo1" src="Eagle_01.svg.png" alt="notfound" style="margin-right: 50px; margin-top: 25px;
-        height: 300px; width: 250px;""></div>
+    <div id="logo2div"><img id="logo2w" src="Eagle_01.svg.png" alt="notfound"></div>
     </div>
 
 
