--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     </div>
     <div>
-                    <a href="htmlNikolaj.html" > <img src="Login.jpg" alt="Login"></a>>
-                    <a href="htmlMathias.html" > <img src="Login.jpg" alt="Login"></a>>
+                    <a href="htmlNikolaj.html" > </a>>
+                    <center><a href="htmlMathias.html" id="dynamisk" > dynamisk menu</a>></center>
     </div>
 
 
